--- a/src/.desktop/Wallman.desktop
+++ b/src/.desktop/Wallman.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Exec=/bin/Wallman
+Exec=/usr/share/Wallman/bin/Wallman
 Name=Wallman
 Icon=applications-graphics
 StartupWMClass=wallman_desktop
